; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_ezx-pcap.c_pcap_irq_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_ezx-pcap.c_pcap_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32)* }
%struct.pcap_chip = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.irq_desc*)* @pcap_irq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcap_irq_handler(i32 %0, %struct.irq_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.irq_desc*, align 8
  %5 = alloca %struct.pcap_chip*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.irq_desc* %1, %struct.irq_desc** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.pcap_chip* @get_irq_data(i32 %6)
  store %struct.pcap_chip* %7, %struct.pcap_chip** %5, align 8
  %8 = load %struct.irq_desc*, %struct.irq_desc** %4, align 8
  %9 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (i32)*, i32 (i32)** %11, align 8
  %13 = load i32, i32* %3, align 4
  %14 = call i32 %12(i32 %13)
  %15 = load %struct.pcap_chip*, %struct.pcap_chip** %5, align 8
  %16 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.pcap_chip*, %struct.pcap_chip** %5, align 8
  %19 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %18, i32 0, i32 0
  %20 = call i32 @queue_work(i32 %17, i32* %19)
  ret void
}

declare dso_local %struct.pcap_chip* @get_irq_data(i32) #1

declare dso_local i32 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
